--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ pip-log.txt
 pip-delete-this-directory.txt 
 
 # Visual Studio Code # 
-.vscode/* 
+.vscode
 !.vscode/settings.json 
 !.vscode/tasks.json 
 !.vscode/launch.json 
