--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.15",
+    "axios": "^1.4.0",
     "baseui": "^13.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -23,6 +25,7 @@
     "styletron-react": "^6.1.0"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.29.9",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
