--- a/frontend/.eslintrc
+++ b/frontend/.eslintrc
@@ -17,18 +17,18 @@
     "eslint:recommended",
     "plugin:react/jsx-runtime",
     "plugin:react/recommended",
-    "plugin:import/recommended",
     "plugin:react-hooks/recommended"
   ],
   "rules": {
     "no-console": "warn",
     "no-unused-vars": "warn",
     "import/prefer-default-export": "off",
-    "react/no-unused-prop-types": "off",
-    "react/require-default-props": "off",
     "react/jsx-uses-react": "off",
-    "react/react-in-jsx-scope": "off",
     "react/jsx-props-no-spreading": "off",
+    "react/no-unused-prop-types": "off",
+    "react/prop-types": "off",
+    "react/react-in-jsx-scope": "off",
+    "react/require-default-props": "off",
     "react-refresh/only-export-components": "warn",
     "import/order": [
       "warn",
