--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
+    "react-hook-form": "^7.45.0",
     "react-router-dom": "^6.14.0",
     "sort-by": "^1.2.0",
     "styletron-engine-atomic": "^1.5.0",
