--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.7.2
 Django==4.2.2
 django-cors-headers==4.1.0
+django-environ==0.9.0
 djangorestframework==3.14.0
+gunicorn==20.1.0
+psycopg2==2.9.5
 pytz==2023.3
 sqlparse==0.4.4
+whitenoise==6.3.0
